--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
         
         <div class='news' data-analytics-value='Kültür-Sanat dünyasında neler oluyor?'>
             <a class='notActiveAccordionHref' href="detay1.html">
-                <img class="newsImage" src="pojal53xtgx.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[0].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/5Xn3vJJS/image-47.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[0].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay1.html" onclick="clickEventHeaderText(this.innerHTML)">Kültür-Sanat dünyasında neler oluyor?</a>
@@ -371,7 +371,7 @@
 
         <div class='news' data-analytics-value='SİNEMA: Savaş Üstüne Savaş'>
             <a class='notActiveAccordionHref' href="detay2.html">
-                <img class="newsImage" src="qmhtjwtef0b.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[1].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/v4x9XQL5/image-48.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[1].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay2.html" onclick="clickEventHeaderText(this.innerHTML)">SİNEMA: Savaş Üstüne Savaş</a>
@@ -390,7 +390,7 @@
 
         <div class='news' data-analytics-value='MEKAN: Maslak&#39;ın en iyi mekanları'>
             <a class='notActiveAccordionHref' href="detay3.html">
-                <img class="newsImage" src="bi41gvi04sv.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[2].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/jZ6CtKKN/image-46.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[2].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay3.html" onclick="clickEventHeaderText(this.innerHTML)">MEKAN: Maslak'ın en iyi mekanları</a>
@@ -399,7 +399,7 @@
                 <p class='newsDescription'> İstanbul’un en hareketli semtlerinden biri olan Maslak’ın günün her öğünü için en iyi alternatifleri... </p>
             </a>
             <div id='collapse3' class='collapse newsDescription' style='padding-top: 0;'>
-                <p>Terra Kitchen<br /><br />Maslak Orjin Plaza&rsquo;daki Orjin Plaza&rsquo;nın zincir restoranlarından biri olan Terra Kitchen, Foodcourt alanında yer alsa da samimi restoran ambiyansını yaşatmayı başarıyor. Zengin men&uuml;s&uuml;yle farklı damak tatlarına hitap eden Terra Kitchen, &ouml;zellikle ev yemekleri ve a&ccedil;ık b&uuml;fe se&ccedil;enekleriyle &ouml;ne &ccedil;ıkıyor.&nbsp;<br /><br />Sanayi 313<br /><br />Maslak&rsquo;ta sıradan restoranlardan farklı, tasarımı ve atmosferiyle &ouml;ne &ccedil;ıkan bir mek&acirc;n arıyorsanız, adresiniz Sanayi 313 olmalı. Eski bir oto tamirhanesinden d&ouml;n&uuml;şt&uuml;r&uuml;len bu mek&acirc;n, dışarıdan bakıldığında sanayi d&uuml;kk&acirc;nlarından farksız g&ouml;r&uuml;nse de i&ccedil;ine adım attığınızda bambaşka bir d&uuml;nyayla karşılaşıyorsunuz. Alt katında tasarım &uuml;r&uuml;nleri ve antikaları bulabileceğiniz bir konsept mağaza, aynı zamanda restoran olarak da hizmet veriyor.&nbsp;<br /><br />YMRT Garden<br /><br />Maslak&rsquo;ta kahvaltı, &ouml;ğle veya akşam yemeği i&ccedil;in farklı bir adres arıyorsanız, YMRT Garden doğru se&ccedil;im. İsmi &lsquo;You Must Remember This&rsquo; a&ccedil;ılımıyla bilinen mek&acirc;n, Maslak ve Arnavutk&ouml;y şubeleriyle kahvaltı ve brunch k&uuml;lt&uuml;r&uuml;n&uuml; &lsquo;farm to table&rsquo; yani &lsquo;&ccedil;iftlikten masaya&rsquo; anlayışıyla sunuyor.&nbsp;<br /><br />Rawsters<br /><br />&Uuml;&ccedil; şubesi olan bu pop&uuml;ler kahve noktası, &ouml;zellikle ofis &ccedil;alışanlarının vazge&ccedil;ilmez adreslerinden. Sağlıklı kahvaltı alternatifleri ve atıştırmalıklarıyla da &ouml;ne &ccedil;ıkıyor. İster sabah işe giderken kahvenizi alıp &ccedil;ıkın, ister sakin bir mola vererek minimal men&uuml;s&uuml;nden se&ccedil;im yapın.<br /><br />Baby Green<br /><br />Adından da anlaşılacağı &uuml;zere, Baby Green sağlıklı yaşamı benimseyenler i&ccedil;in 42 Maslak&rsquo;taki en doğru adreslerden biri. &Ouml;zellikle bowl ve salatalarıyla tanınan bu restoran, hem sağlığına dikkat edenlere hem de hafif ve besleyici lezzetler arayanlara hitap ediyor.</p>
+                <p>Terra Kitchen<br /><br />Maslak Orjin Plaza&rsquo;daki Orjin Plaza&rsquo;nın zincir restoranlarından biri olan Terra Kitchen, Foodcourt alanında yer alsa da samimi restoran ambiyansını yaşatmayı başarıyor. Zengin men&uuml;s&uuml;yle farklı damak tatlarına hitap eden Terra Kitchen, &ouml;zellikle ev yemekleri ve a&ccedil;ık b&uuml;fe se&ccedil;enekleriyle &ouml;ne &ccedil;ıkıyor.&nbsp;<br /><br />Sanayi 313<br /><br />Maslak&rsquo;ta sıradan restoranlardan farklı, tasarımı ve atmosferiyle &ouml;ne &ccedil;ıkan bir mek&acirc;n arıyorsanız, adresiniz Sanayi 313 olmalı. Eski bir oto tamirhanesinden d&ouml;n&uuml;şt&uuml;r&uuml;len bu mek&acirc;n, dışarıdan bakıldığında sanayi d&uuml;kk&acirc;nlarından farksız g&ouml;r&uuml;nse de i&ccedil;ine adım attığınızda bambaşa bir d&uuml;nyayla karşılaşıyorsunuz. Alt katında tasarım &uuml;r&uuml;nleri ve antikaları bulabileceğiniz bir konsept mağaza, aynı zamanda restoran olarak da hizmet veriyor.&nbsp;<br /><br />YMRT Garden<br /><br />Maslak&rsquo;ta kahvaltı, &ouml;ğle veya akşam yemeği i&ccedil;in farklı bir adres arıyorsanız, YMRT Garden doğru se&ccedil;im. İsmi &lsquo;You Must Remember This&rsquo; a&ccedil;ılımıyla bilinen mek&acirc;n, Maslak ve Arnavutk&ouml;y şubeleriyle kahvaltı ve brunch k&uuml;lt&uuml;r&uuml;n&uuml; &lsquo;farm to table&rsquo; yani &lsquo;&ccedil;iftlikten masaya&rsquo; anlayışıyla sunuyor.&nbsp;<br /><br />Rawsters<br /><br />&Uuml;&ccedil; şubesi olan bu pop&uuml;ler kahve noktası, &ouml;zellikle ofis &ccedil;alışanlarının vazge&ccedil;ilmez adreslerinden. Sağlıklı kahvaltı alternatifleri ve atıştırmalıklarıyla da &ouml;ne &ccedil;ıkıyor. İster sabah işe giderken kahvenizi alıp &ccedil;ıkın, ister sakin bir mola vererek minimal men&uuml;s&uuml;nden se&ccedil;im yapın.<br /><br />Baby Green<br /><br />Adından da anlaşılacağı &uuml;zere, Baby Green sağlıklı yaşamı benimseyenler i&ccedil;in 42 Maslak&rsquo;taki en doğru adreslerden biri. &Ouml;zellikle bowl ve salatalarıyla tanınan bu restoran, hem sağlığına dikkat edenlere hem de hafif ve besleyici lezzetler arayanlara hitap ediyor.</p>
                 <p style='font-size: 13px;color: #767676;line-height: 1.5'></p>
                 <p class='newsSource' style='font-size:13px;'><b style='font-weight: 800;font-size:13px;'>KAYNAK:</b> Bundle Editors</p>
             </div>
@@ -409,7 +409,7 @@
 
         <div class='news' data-analytics-value='SERGİ: Bodrum, Marmaris Yokken, Adalar Vardı'>
             <a class='notActiveAccordionHref' href="detay4.html">
-                <img class="newsImage" src="vcf0w4z33sd.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[3].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/SXvdkjNQ/image-45.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[3].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay4.html" onclick="clickEventHeaderText(this.innerHTML)">SERGİ: Bodrum, Marmaris Yokken, Adalar Vardı</a>
@@ -428,7 +428,7 @@
 
         <div class='news' data-analytics-value='YENİ ÇIKAN: M. Enis Tayman&#39;dan &quot;Golem&quot;'>
             <a class='notActiveAccordionHref' href="detay5.html">
-                <img class="newsImage" src="onexd2g20yd.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[4].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/gFSxsw1Q/image-43.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[4].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay5.html" onclick="clickEventHeaderText(this.innerHTML)">YENİ ÇIKAN: M. Enis Tayman'dan "Golem"</a>
@@ -447,7 +447,7 @@
 
         <div class='news' data-analytics-value='KONSER: Morrisey, İstanbul ve Ankara&#39;da konser veriyor'>
             <a class='notActiveAccordionHref' href="detay6.html">
-                <img class="newsImage" src="izphwgtjygj.jpg" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[5].innerHTML)" />
+                <img class="newsImage" src="https://i.ibb.co/d0ftBYxV/image-44.png" onclick="clickEventImageText(document.getElementsByClassName('newsHeaderAClass')[5].innerHTML)" />
             </a>
             <h3 class='newsHeader'>
                 <a class="newsHeaderAClass notActiveAccordionHref" href="detay6.html" onclick="clickEventHeaderText(this.innerHTML)">KONSER: Morrisey, İstanbul ve Ankara'da konser veriyor</a>
