--- a/index.html
+++ b/index.html
@@ -353,17 +353,17 @@
         </div>
 
         <div class='news newsSponsorhip'>
-            <a onclick="clickSponsorshipClick()" target='_blank'><img class='newsImage' src='sdabhhw15mb.jpg' alt='' /></a>
+            <a onclick="clickSponsorshipClick()" target='_blank'><img class='newsImage' src='https://i.ibb.co/RktCjvjB/image-49.png' alt='TAG Sponsorlu İçerik' /></a>
             <div class='row' style='padding-top: 12px;'>
                 <div class='col-6'>
-                    <img src='yoy0vmq45zw.png' width='70px' alt=''>
+                    <img src='https://static.bundle.app/bundleBulten/sponsorlar/5rub0be0fos.png' width='70px' alt='TAG Logo'>
                 </div>
                 <div class='col-6 float-right'>
                     <p class='newsSponsorhipText' style='text-align: end;padding-right: 10px;'>SPONSORLU</p>
                 </div>
             </div>
             <a onclick='clickSponsorshipClick()' href='https://gdetr.hit.gemius.pl/hitredir/id=dw.g8stWG8nmlPxVZYNRWKPMnFl66zArTNvc.sKEfhT.M7/fastid=boekgwfmyettoxfudqqdirvibeln/stparam=kejkcxllvy/nc=0/gdpr=0/gdpr_consent=/url=https://marti.go.link/jRzE0' target='_blank'>
-                <h3 class='newsHeader'>Taş Devri’ni Kapat,<br> TAG Devri’ni Aç!</h3>
+                <h3 class='newsHeader'>Ulaşımda Taş Devri’ni Kapat, TAG Devri’ni Aç!</h3>
                 <p class='newsDescription'> Sen de TAG'ı indir, özel aracın sürücüsüyle gelsin, TAG diye yola çık. Hafta sonu etkinliklerine rahat rahat ulaş, şehrin tadını çıkar! </p>
             </a>
             <p class='newsLinkContainer'><a onclick="clickSponsorshipClick()" class='newsLink' href='https://gdetr.hit.gemius.pl/hitredir/id=dw.g8stWG8nmlPxVZYNRWKPMnFl66zArTNvc.sKEfhT.M7/fastid=boekgwfmyettoxfudqqdirvibeln/stparam=kejkcxllvy/nc=0/gdpr=0/gdpr_consent=/url=https://marti.go.link/jRzE0'>KEŞFET <i class='fas fa-arrow-right' style='font-weight: 900;font-size: 9px;padding-left: 7px;line-height: 10px;'></i></a></p>
