--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 </div>
             </div>
             <a onclick='clickSponsorshipClick()' href='https://gdetr.hit.gemius.pl/hitredir/id=dw.g8stWG8nmlPxVZYNRWKPMnFl66zArTNvc.sKEfhT.M7/fastid=boekgwfmyettoxfudqqdirvibeln/stparam=kejkcxllvy/nc=0/gdpr=0/gdpr_consent=/url=https://marti.go.link/jRzE0' target='_blank'>
-                <h3 class='newsHeader'>Ulaşımda Taş Devri’ni Kapat, TAG Devri’ni Aç!</h3>
+                <h3 class='newsHeader'>Taş Devri’ni Kapat, <br> TAG Devri’ni Aç!</h3>
                 <p class='newsDescription'> Sen de TAG'ı indir, özel aracın sürücüsüyle gelsin, TAG diye yola çık. Hafta sonu etkinliklerine rahat rahat ulaş, şehrin tadını çıkar! </p>
             </a>
             <p class='newsLinkContainer'><a onclick="clickSponsorshipClick()" class='newsLink' href='https://gdetr.hit.gemius.pl/hitredir/id=dw.g8stWG8nmlPxVZYNRWKPMnFl66zArTNvc.sKEfhT.M7/fastid=boekgwfmyettoxfudqqdirvibeln/stparam=kejkcxllvy/nc=0/gdpr=0/gdpr_consent=/url=https://marti.go.link/jRzE0'>KEŞFET <i class='fas fa-arrow-right' style='font-weight: 900;font-size: 9px;padding-left: 7px;line-height: 10px;'></i></a></p>
